--- a/1122/DiscordRPC.cfg
+++ b/1122/DiscordRPC.cfg
@@ -40,6 +40,9 @@ richpresence {
     # Requires config file editing to enable again
     B:Disable-Config-GUI=false
 
+    # Client ID allowing custom icons to show up
+    S:"Client ID"=699139053538377779
+
     # Do you want to use development commands?
     B:DevCommands=true
 }
